ConstructDocElementFrame can return null if the XBL hasn't loaded yet.  Handle that XBL loading later by changing how XBL triggers the frame construction and making it possible to recreate the doc element hierarchy even if there is no doc element frame.  Bug 366207, r=sicking, sr=roc